--- a/functions/package.json
+++ b/functions/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.7.18",
+    "express": "^4.18.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
